Fix bug 105103: LDAP attributes should not be case-sensitive. Patch from John Marmion <john.marmion@ireland.sun.com> . r=dmose@netscape.com, sr=sspitzer@netscape.com.